--- a/WeatherApp/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/WeatherApp/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -25,13 +25,37 @@
                 <!--/>-->
 
             <TextView
-                fontPath="fonts/UTM Avo.ttf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:text="Setting"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/navigation_item_map"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:background="@drawable/drawer_selector_item">
+
+            <!--<ImageView-->
+            <!--android:layout_width="36dp"-->
+            <!--android:layout_height="36dp"-->
+            <!--android:layout_gravity="center_vertical|left"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--/>-->
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:text="Map"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
