--- a/WeatherApp/app/src/main/res/values/colors.xml
+++ b/WeatherApp/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="black">#000000</color>
     <color name="grey">#eeeeee</color>
 
+    <color name="light_white">#60ffffff</color>
+
     <color name="navigation_selector_background">#30ffffff</color>
 </resources>
