--- a/WeatherApp/app/src/main/res/drawable/main_background.xml
+++ b/WeatherApp/app/src/main/res/drawable/main_background.xml
@@ -4,8 +4,8 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle">
             <gradient
-                android:startColor="@color/grey"
-                android:endColor="#220044"
+                android:startColor="#218CC0"
+                android:endColor="#3143C9"
                 android:type="linear"
                 android:angle="90"/>
 
