--- a/WeatherApp/app/src/main/res/layout/fragment_main.xml
+++ b/WeatherApp/app/src/main/res/layout/fragment_main.xml
@@ -8,33 +8,32 @@
     <com.ogaclejapan.smarttablayout.SmartTabLayout
         android:id="@+id/view_pager_tab"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="38dp"
         app:stl_indicatorAlwaysInCenter="false"
         app:stl_indicatorWithoutPadding="false"
         app:stl_indicatorInFront="false"
         app:stl_indicatorInterpolation="smart"
         app:stl_indicatorGravity="bottom"
         app:stl_indicatorColor="#40C4FF"
-        app:stl_indicatorThickness="4dp"
+        app:stl_indicatorThickness="2dp"
         app:stl_indicatorWidth="auto"
-        app:stl_indicatorCornerRadius="2dp"
+        app:stl_indicatorCornerRadius="1dp"
         app:stl_overlineColor="#70ffffff"
         app:stl_overlineThickness="0dp"
         app:stl_underlineColor="#70ffffff"
         app:stl_underlineThickness="1dp"
-        app:stl_dividerColor="#70ffffff"
+        app:stl_dividerColor="#00000000"
         app:stl_dividerThickness="1dp"
         app:stl_defaultTabBackground="?attr/selectableItemBackground"
         app:stl_defaultTabTextAllCaps="true"
         app:stl_defaultTabTextColor="@color/white"
-        app:stl_defaultTabTextSize="15sp"
+        app:stl_defaultTabTextSize="14sp"
         app:stl_defaultTabTextHorizontalPadding="12dp"
         app:stl_defaultTabTextMinWidth="0dp"
         app:stl_distributeEvenly="true"
         app:stl_clickable="true"
         app:stl_titleOffset="24dp"
-        app:stl_drawDecorationAfterTab="false"
-        />
+        app:stl_drawDecorationAfterTab="false" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
